deployments/cluster-setup/rancher/lb-service-abs.yaml
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf-lb
  labels:
    app: audiobookshelf
  annotations:
    metallb.universe.tf/loadBalancerIPs: 172.18.1.52
    app: audiobookshelf
  namespace: mediacenter
spec:
  selector:
    app: audiobookshelf
  ports:
  - port: 80
    targetPort: 80
  type: LoadBalancer
