deployments/cluster-setup/rancher/lb-service-rancher.yaml
apiVersion: v1
kind: Service
metadata: 
  name: rancher-lb
  labels:
    app: rancher
  annotations:
    metallb.universe.tf/loadBalancerIPs: 172.16.101.120
    app: rancher
  namespace: cattle-system
spec:
  selector:
    app: rancher
  ports:
  - port: 443
    targetPort: 443
  type: LoadBalancer
