deployments/cluster-setup/rancher/lb-service-syncthing.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncthing-lb
  labels:
    app.kubernetes.io/instance: syncthing
    app.kubernetes.io/name: syncthing
  annotations:
    metallb.universe.tf/loadBalancerIPs: 172.18.1.53
    app: syncthing
  namespace: mediacenter
spec:
  selector:
    app: syncthing
  ports:
  - port: 22000
    targetPort: 22000
  type: LoadBalancer
