deployments/cluster-setup/rancher/ingress-rancher.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rancher
  namespace: cattle-system
  annotations:
    traefik.intress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: rancher.gygax.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  rancher
                port:
                  number: 80
